# coco-storage

./: .gitignore  CMakeLists.txt  README.md  ccreate.py  conanfile.py
coco/: BufferStorage.cpp  BufferStorage.hpp  CMakeLists.txt  Storage.cpp  Storage.hpp  Storage_Buffer.cpp  Storage_Buffer.hpp  Storage_Flash.cpp  Storage_Flash.hpp
test/: CMakeLists.txt  StorageTest.cpp
test/native/: StorageTest.hpp
test/nrf52dongle/: StorageTest.hpp
test/nucleo-g491re/: StorageTest.hpp
test/stm32f051discovery/: StorageTest.hpp
test/stm32f0discovery/: StorageTest.hpp
test/stm32g431nucleo/: StorageTest.hpp
